// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`marker addMarker, has status 1`] = `
{
  "configParams": {
    "latProps": [
      "lat",
    ],
    "longProps": [
      "long",
    ],
    "tooltipProperties": [],
  },
  "markerTypes": {
    "myType": {
      "affectedRadiusMarkers": [],
      "clusterGroup": {
        "addLayer": [MockFunction] {
          "calls": [
            [
              NewClass {
                "_events": {
                  "click": [
                    {
                      "ctx": undefined,
                      "fn": [Function],
                    },
                  ],
                  "keypress": [
                    {
                      "ctx": undefined,
                      "fn": [Function],
                    },
                  ],
                  "mouseout": [
                    {
                      "ctx": undefined,
                      "fn": [Function],
                    },
                  ],
                  "mouseover": [
                    {
                      "ctx": undefined,
                      "fn": [Function],
                    },
                  ],
                  "move": [
                    {
                      "ctx": undefined,
                      "fn": [Function],
                    },
                  ],
                  "remove": [
                    {
                      "ctx": undefined,
                      "fn": [Function],
                    },
                  ],
                },
                "_initHooksCalled": true,
                "_latlng": {
                  "lat": 2,
                  "lng": 1,
                },
                "_popup": NewClass {
                  "_content": "<h3>myLocation <img src="/markers/marker-warning.svg" style="width:20px; height:20px" type="image/svg" title="State: warning"></h3><h6> myType</h6>",
                  "_initHooksCalled": true,
                  "_source": [Circular],
                  "options": {},
                },
                "_popupHandlersAdded": true,
                "feature": {
                  "geometry": undefined,
                  "properties": {
                    "id": "id123",
                    "name": "myLocation",
                    "state": "warning",
                    "type": "myType",
                    "url": "undefinedid123",
                  },
                  "type": "Point",
                },
                "options": {
                  "icon": NewClass {
                    "_initHooksCalled": true,
                    "options": {
                      "className": "leaflet-data-marker",
                      "html": "<svg version="1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 149 178"><path fill="#475bd6" stroke="#FFF" stroke-width="6" stroke-miterlimit="10" d="M126 23l-6-6A69 69 0 0 0 74 1a69 69 0 0 0-51 22A70 70 0 0 0 1 74c0 21 7 38 22 52l43 47c6 6 11 6 16 0l48-51c12-13 18-29 18-48 0-20-8-37-22-51z"/><circle fill="#ffffff" cx="74" cy="75" r="61"/><circle fill="#FFFFFF" cx="74" cy="75" r="30"/><svg xmlns="http://www.w3.org/2000/svg" viewBox="-11.3 -6 55 55"><path fill="#408BFC" d="M26.002 4H5.998A1.998 1.998 0 0 0 4 5.998v20.004A1.998 1.998 0 0 0 5.998 28h20.004A1.998 1.998 0 0 0 28 26.002V5.998A1.998 1.998 0 0 0 26.002 4zM14.875 8h2.25v10h-2.25zM16 24a1.5 1.5 0 1 1 1.5-1.5A1.5 1.5 0 0 1 16 24z"/><path d="M14.875 8h2.25v10h-2.25zM16 24a1.5 1.5 0 1 1 1.5-1.5A1.5 1.5 0 0 1 16 24z" opacity="0"/></svg></svg>",
                      "iconAnchor": [
                        12,
                        32,
                      ],
                      "iconSize": [
                        36,
                        41,
                      ],
                      "popupAnchor": [
                        0,
                        -28,
                      ],
                    },
                  },
                  "title": "myLocation",
                },
              },
            ],
          ],
          "results": [
            {
              "type": "return",
              "value": undefined,
            },
          ],
        },
      },
    },
  },
}
`;

exports[`marker addMarker, has tooltip props 1`] = `
{
  "configParams": {
    "latProps": [
      "lat",
    ],
    "longProps": [
      "long",
    ],
    "tooltipProperties": [
      "tooltipProp",
      "tryToShowThis",
    ],
  },
  "markerTypes": {
    "myType": {
      "affectedRadiusMarkers": [],
      "clusterGroup": {
        "addLayer": [MockFunction] {
          "calls": [
            [
              NewClass {
                "_events": {
                  "click": [
                    {
                      "ctx": undefined,
                      "fn": [Function],
                    },
                  ],
                  "keypress": [
                    {
                      "ctx": undefined,
                      "fn": [Function],
                    },
                  ],
                  "mouseout": [
                    {
                      "ctx": undefined,
                      "fn": [Function],
                    },
                  ],
                  "mouseover": [
                    {
                      "ctx": undefined,
                      "fn": [Function],
                    },
                  ],
                  "move": [
                    {
                      "ctx": undefined,
                      "fn": [Function],
                    },
                  ],
                  "remove": [
                    {
                      "ctx": undefined,
                      "fn": [Function],
                    },
                  ],
                },
                "_initHooksCalled": true,
                "_latlng": {
                  "lat": 2,
                  "lng": 1,
                },
                "_popup": NewClass {
                  "_content": "<h3>myLocation <img src="/markers/marker-unknown.svg" style="width:20px; height:20px" type="image/svg" title="State: unknown"></h3><h6> myType</h6><h7> tooltipProp: showThis</h7>",
                  "_initHooksCalled": true,
                  "_source": [Circular],
                  "options": {},
                },
                "_popupHandlersAdded": true,
                "feature": {
                  "geometry": undefined,
                  "properties": {
                    "id": "id123",
                    "name": "myLocation",
                    "state": "unknown",
                    "type": "myType",
                    "url": "undefinedid123",
                  },
                  "type": "Point",
                },
                "options": {
                  "icon": NewClass {
                    "_initHooksCalled": true,
                    "options": {
                      "className": "leaflet-data-marker",
                      "html": "<svg version="1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 149 178"><path fill="#180068" stroke="#FFF" stroke-width="6" stroke-miterlimit="10" d="M126 23l-6-6A69 69 0 0 0 74 1a69 69 0 0 0-51 22A70 70 0 0 0 1 74c0 21 7 38 22 52l43 47c6 6 11 6 16 0l48-51c12-13 18-29 18-48 0-20-8-37-22-51z"/><circle fill="#ffffff" cx="74" cy="75" r="61"/><circle fill="#FFFFFF" cx="74" cy="75" r="30"/><svg xmlns="http://www.w3.org/2000/svg" viewBox="-11.3 -6 55 55"><path fill="#8F8B8B" d="M29.416 14.59L17.41 2.585a1.994 1.994 0 0 0-2.82 0L2.585 14.591a1.994 1.994 0 0 0 0 2.819L14.59 29.416a1.994 1.994 0 0 0 2.819 0L29.416 17.41a1.994 1.994 0 0 0 0-2.82zM16 24a1.5 1.5 0 1 1 1.5-1.5A1.5 1.5 0 0 1 16 24zm1.125-6.752v1.877h-2.25V15H17a1.875 1.875 0 0 0 0-3.75h-2a1.877 1.877 0 0 0-1.875 1.875v.5h-2.25v-.5A4.13 4.13 0 0 1 15 9h2a4.125 4.125 0 0 1 .125 8.248z"/><path d="M16 21a1.5 1.5 0 1 1-1.5 1.5A1.5 1.5 0 0 1 16 21zm1.125-3.752A4.125 4.125 0 0 0 17 9h-2a4.13 4.13 0 0 0-4.125 4.125v.5h2.25v-.5A1.877 1.877 0 0 1 15 11.25h2A1.875 1.875 0 0 1 17 15h-2.125v4.125h2.25z" opacity="0"/></svg></svg>",
                      "iconAnchor": [
                        12,
                        32,
                      ],
                      "iconSize": [
                        36,
                        41,
                      ],
                      "popupAnchor": [
                        0,
                        -28,
                      ],
                    },
                  },
                  "title": "myLocation",
                },
              },
            ],
          ],
          "results": [
            {
              "type": "return",
              "value": undefined,
            },
          ],
        },
      },
    },
  },
}
`;

exports[`marker addMarker, known affectedRadiusMarkers, with no radius 1`] = `
{
  "configParams": {
    "affectedRadiusProps": [
      "radius",
    ],
    "latProps": [
      "lat",
    ],
    "longProps": [
      "long",
    ],
    "tooltipProperties": [],
  },
  "markerTypes": {
    "myType": {
      "affectedRadiusMarkers": {},
      "affectedRadiusMarkersLayer": {
        "removeLayer": [MockFunction] {
          "calls": [
            [
              NewClass {
                "_initHooksCalled": true,
                "_latlng": null,
                "_mRadius": 10,
                "options": {},
              },
            ],
          ],
          "results": [
            {
              "type": "return",
              "value": undefined,
            },
          ],
        },
      },
      "clusterGroup": {
        "addLayer": [MockFunction] {
          "calls": [
            [
              NewClass {
                "_events": {
                  "click": [
                    {
                      "ctx": undefined,
                      "fn": [Function],
                    },
                  ],
                  "keypress": [
                    {
                      "ctx": undefined,
                      "fn": [Function],
                    },
                  ],
                  "mouseout": [
                    {
                      "ctx": undefined,
                      "fn": [Function],
                    },
                  ],
                  "mouseover": [
                    {
                      "ctx": undefined,
                      "fn": [Function],
                    },
                  ],
                  "move": [
                    {
                      "ctx": undefined,
                      "fn": [Function],
                    },
                  ],
                  "remove": [
                    {
                      "ctx": undefined,
                      "fn": [Function],
                    },
                  ],
                },
                "_initHooksCalled": true,
                "_latlng": {
                  "lat": 2,
                  "lng": 1,
                },
                "_popup": NewClass {
                  "_content": "<h3>myLocation <img src="/markers/marker-unknown.svg" style="width:20px; height:20px" type="image/svg" title="State: unknown"></h3><h6> myType</h6>",
                  "_initHooksCalled": true,
                  "_source": [Circular],
                  "options": {},
                },
                "_popupHandlersAdded": true,
                "feature": {
                  "geometry": undefined,
                  "properties": {
                    "id": "id123",
                    "name": "myLocation",
                    "state": "unknown",
                    "type": "myType",
                    "url": "undefinedid123",
                  },
                  "type": "Point",
                },
                "options": {
                  "icon": NewClass {
                    "_initHooksCalled": true,
                    "options": {
                      "className": "leaflet-data-marker",
                      "html": "<svg version="1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 149 178"><path fill="#180068" stroke="#FFF" stroke-width="6" stroke-miterlimit="10" d="M126 23l-6-6A69 69 0 0 0 74 1a69 69 0 0 0-51 22A70 70 0 0 0 1 74c0 21 7 38 22 52l43 47c6 6 11 6 16 0l48-51c12-13 18-29 18-48 0-20-8-37-22-51z"/><circle fill="#ffffff" cx="74" cy="75" r="61"/><circle fill="#FFFFFF" cx="74" cy="75" r="30"/><svg xmlns="http://www.w3.org/2000/svg" viewBox="-11.3 -6 55 55"><path fill="#8F8B8B" d="M29.416 14.59L17.41 2.585a1.994 1.994 0 0 0-2.82 0L2.585 14.591a1.994 1.994 0 0 0 0 2.819L14.59 29.416a1.994 1.994 0 0 0 2.819 0L29.416 17.41a1.994 1.994 0 0 0 0-2.82zM16 24a1.5 1.5 0 1 1 1.5-1.5A1.5 1.5 0 0 1 16 24zm1.125-6.752v1.877h-2.25V15H17a1.875 1.875 0 0 0 0-3.75h-2a1.877 1.877 0 0 0-1.875 1.875v.5h-2.25v-.5A4.13 4.13 0 0 1 15 9h2a4.125 4.125 0 0 1 .125 8.248z"/><path d="M16 21a1.5 1.5 0 1 1-1.5 1.5A1.5 1.5 0 0 1 16 21zm1.125-3.752A4.125 4.125 0 0 0 17 9h-2a4.13 4.13 0 0 0-4.125 4.125v.5h2.25v-.5A1.877 1.877 0 0 1 15 11.25h2A1.875 1.875 0 0 1 17 15h-2.125v4.125h2.25z" opacity="0"/></svg></svg>",
                      "iconAnchor": [
                        12,
                        32,
                      ],
                      "iconSize": [
                        36,
                        41,
                      ],
                      "popupAnchor": [
                        0,
                        -28,
                      ],
                    },
                  },
                  "title": "myLocation",
                },
              },
            ],
          ],
          "results": [
            {
              "type": "return",
              "value": undefined,
            },
          ],
        },
      },
    },
  },
}
`;

exports[`marker addMarker, known affectedRadiusMarkers, with radius 1`] = `
{
  "configParams": {
    "affectedRadiusProps": [
      "radius",
    ],
    "latProps": [
      "lat",
    ],
    "longProps": [
      "long",
    ],
    "tooltipProperties": [],
  },
  "markerTypes": {
    "myType": {
      "affectedRadiusMarkers": {
        "id123": NewClass {
          "_initHooksCalled": true,
          "_latlng": {
            "lat": 2,
            "lng": 1,
          },
          "_mRadius": 5,
          "feature": {
            "properties": {
              "id": "id123",
              "name": "myLocation",
              "state": "unknown",
              "type": "myType",
              "url": "undefinedid123",
            },
          },
          "options": {
            "color": "#3388ff",
          },
        },
      },
      "clusterGroup": {
        "addLayer": [MockFunction] {
          "calls": [
            [
              NewClass {
                "_events": {
                  "click": [
                    {
                      "ctx": undefined,
                      "fn": [Function],
                    },
                  ],
                  "keypress": [
                    {
                      "ctx": undefined,
                      "fn": [Function],
                    },
                  ],
                  "mouseout": [
                    {
                      "ctx": undefined,
                      "fn": [Function],
                    },
                  ],
                  "mouseover": [
                    {
                      "ctx": undefined,
                      "fn": [Function],
                    },
                  ],
                  "move": [
                    {
                      "ctx": undefined,
                      "fn": [Function],
                    },
                  ],
                  "remove": [
                    {
                      "ctx": undefined,
                      "fn": [Function],
                    },
                  ],
                },
                "_initHooksCalled": true,
                "_latlng": {
                  "lat": 2,
                  "lng": 1,
                },
                "_popup": NewClass {
                  "_content": "<h3>myLocation <img src="/markers/marker-unknown.svg" style="width:20px; height:20px" type="image/svg" title="State: unknown"></h3><h6> myType</h6>",
                  "_initHooksCalled": true,
                  "_source": [Circular],
                  "options": {},
                },
                "_popupHandlersAdded": true,
                "feature": {
                  "geometry": undefined,
                  "properties": {
                    "id": "id123",
                    "name": "myLocation",
                    "state": "unknown",
                    "type": "myType",
                    "url": "undefinedid123",
                  },
                  "type": "Point",
                },
                "options": {
                  "icon": NewClass {
                    "_initHooksCalled": true,
                    "options": {
                      "className": "leaflet-data-marker",
                      "html": "<svg version="1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 149 178"><path fill="#180068" stroke="#FFF" stroke-width="6" stroke-miterlimit="10" d="M126 23l-6-6A69 69 0 0 0 74 1a69 69 0 0 0-51 22A70 70 0 0 0 1 74c0 21 7 38 22 52l43 47c6 6 11 6 16 0l48-51c12-13 18-29 18-48 0-20-8-37-22-51z"/><circle fill="#ffffff" cx="74" cy="75" r="61"/><circle fill="#FFFFFF" cx="74" cy="75" r="30"/><svg xmlns="http://www.w3.org/2000/svg" viewBox="-11.3 -6 55 55"><path fill="#8F8B8B" d="M29.416 14.59L17.41 2.585a1.994 1.994 0 0 0-2.82 0L2.585 14.591a1.994 1.994 0 0 0 0 2.819L14.59 29.416a1.994 1.994 0 0 0 2.819 0L29.416 17.41a1.994 1.994 0 0 0 0-2.82zM16 24a1.5 1.5 0 1 1 1.5-1.5A1.5 1.5 0 0 1 16 24zm1.125-6.752v1.877h-2.25V15H17a1.875 1.875 0 0 0 0-3.75h-2a1.877 1.877 0 0 0-1.875 1.875v.5h-2.25v-.5A4.13 4.13 0 0 1 15 9h2a4.125 4.125 0 0 1 .125 8.248z"/><path d="M16 21a1.5 1.5 0 1 1-1.5 1.5A1.5 1.5 0 0 1 16 21zm1.125-3.752A4.125 4.125 0 0 0 17 9h-2a4.13 4.13 0 0 0-4.125 4.125v.5h2.25v-.5A1.877 1.877 0 0 1 15 11.25h2A1.875 1.875 0 0 1 17 15h-2.125v4.125h2.25z" opacity="0"/></svg></svg>",
                      "iconAnchor": [
                        12,
                        32,
                      ],
                      "iconSize": [
                        36,
                        41,
                      ],
                      "popupAnchor": [
                        0,
                        -28,
                      ],
                    },
                  },
                  "title": "myLocation",
                },
              },
            ],
          ],
          "results": [
            {
              "type": "return",
              "value": undefined,
            },
          ],
        },
      },
    },
  },
}
`;

exports[`marker addMarker, no affectedRadiusMarkers, with radius 1`] = `
{
  "configParams": {
    "affectedRadiusProps": [
      "radius",
    ],
    "latProps": [
      "lat",
    ],
    "longProps": [
      "long",
    ],
    "tooltipProperties": [],
  },
  "markerTypes": {
    "myType": {
      "affectedRadiusMarkers": {
        "id123": NewClass {
          "_initHooksCalled": true,
          "_latlng": {
            "lat": 2,
            "lng": 1,
          },
          "_mRadius": 5,
          "feature": {
            "properties": {
              "id": "id123",
              "name": "myLocation",
              "state": "unknown",
              "type": "myType",
              "url": "undefinedid123",
            },
          },
          "options": {
            "color": "#3388ff",
            "radius": 5,
          },
        },
      },
      "affectedRadiusMarkersLayer": {
        "addLayer": [MockFunction] {
          "calls": [
            [
              NewClass {
                "_initHooksCalled": true,
                "_latlng": {
                  "lat": 2,
                  "lng": 1,
                },
                "_mRadius": 5,
                "feature": {
                  "properties": {
                    "id": "id123",
                    "name": "myLocation",
                    "state": "unknown",
                    "type": "myType",
                    "url": "undefinedid123",
                  },
                },
                "options": {
                  "color": "#3388ff",
                  "radius": 5,
                },
              },
            ],
          ],
          "results": [
            {
              "type": "return",
              "value": undefined,
            },
          ],
        },
      },
      "clusterGroup": {
        "addLayer": [MockFunction] {
          "calls": [
            [
              NewClass {
                "_events": {
                  "click": [
                    {
                      "ctx": undefined,
                      "fn": [Function],
                    },
                  ],
                  "keypress": [
                    {
                      "ctx": undefined,
                      "fn": [Function],
                    },
                  ],
                  "mouseout": [
                    {
                      "ctx": undefined,
                      "fn": [Function],
                    },
                  ],
                  "mouseover": [
                    {
                      "ctx": undefined,
                      "fn": [Function],
                    },
                  ],
                  "move": [
                    {
                      "ctx": undefined,
                      "fn": [Function],
                    },
                  ],
                  "remove": [
                    {
                      "ctx": undefined,
                      "fn": [Function],
                    },
                  ],
                },
                "_initHooksCalled": true,
                "_latlng": {
                  "lat": 2,
                  "lng": 1,
                },
                "_popup": NewClass {
                  "_content": "<h3>myLocation <img src="/markers/marker-unknown.svg" style="width:20px; height:20px" type="image/svg" title="State: unknown"></h3><h6> myType</h6>",
                  "_initHooksCalled": true,
                  "_source": [Circular],
                  "options": {},
                },
                "_popupHandlersAdded": true,
                "feature": {
                  "geometry": undefined,
                  "properties": {
                    "id": "id123",
                    "name": "myLocation",
                    "state": "unknown",
                    "type": "myType",
                    "url": "undefinedid123",
                  },
                  "type": "Point",
                },
                "options": {
                  "icon": NewClass {
                    "_initHooksCalled": true,
                    "options": {
                      "className": "leaflet-data-marker",
                      "html": "<svg version="1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 149 178"><path fill="#180068" stroke="#FFF" stroke-width="6" stroke-miterlimit="10" d="M126 23l-6-6A69 69 0 0 0 74 1a69 69 0 0 0-51 22A70 70 0 0 0 1 74c0 21 7 38 22 52l43 47c6 6 11 6 16 0l48-51c12-13 18-29 18-48 0-20-8-37-22-51z"/><circle fill="#ffffff" cx="74" cy="75" r="61"/><circle fill="#FFFFFF" cx="74" cy="75" r="30"/><svg xmlns="http://www.w3.org/2000/svg" viewBox="-11.3 -6 55 55"><path fill="#8F8B8B" d="M29.416 14.59L17.41 2.585a1.994 1.994 0 0 0-2.82 0L2.585 14.591a1.994 1.994 0 0 0 0 2.819L14.59 29.416a1.994 1.994 0 0 0 2.819 0L29.416 17.41a1.994 1.994 0 0 0 0-2.82zM16 24a1.5 1.5 0 1 1 1.5-1.5A1.5 1.5 0 0 1 16 24zm1.125-6.752v1.877h-2.25V15H17a1.875 1.875 0 0 0 0-3.75h-2a1.877 1.877 0 0 0-1.875 1.875v.5h-2.25v-.5A4.13 4.13 0 0 1 15 9h2a4.125 4.125 0 0 1 .125 8.248z"/><path d="M16 21a1.5 1.5 0 1 1-1.5 1.5A1.5 1.5 0 0 1 16 21zm1.125-3.752A4.125 4.125 0 0 0 17 9h-2a4.13 4.13 0 0 0-4.125 4.125v.5h2.25v-.5A1.877 1.877 0 0 1 15 11.25h2A1.875 1.875 0 0 1 17 15h-2.125v4.125h2.25z" opacity="0"/></svg></svg>",
                      "iconAnchor": [
                        12,
                        32,
                      ],
                      "iconSize": [
                        36,
                        41,
                      ],
                      "popupAnchor": [
                        0,
                        -28,
                      ],
                    },
                  },
                  "title": "myLocation",
                },
              },
            ],
          ],
          "results": [
            {
              "type": "return",
              "value": undefined,
            },
          ],
        },
      },
    },
  },
}
`;

exports[`marker addMarker, no markers + hideAffectedRadius 1`] = `
{
  "configParams": {
    "hideAffectedRadius": true,
    "latProps": [
      "lat",
    ],
    "longProps": [
      "long",
    ],
    "tooltipProperties": [],
  },
  "markerTypes": {
    "myType": {
      "affectedRadiusMarkers": [],
      "clusterGroup": {
        "addLayer": [MockFunction] {
          "calls": [
            [
              NewClass {
                "_events": {
                  "click": [
                    {
                      "ctx": undefined,
                      "fn": [Function],
                    },
                  ],
                  "keypress": [
                    {
                      "ctx": undefined,
                      "fn": [Function],
                    },
                  ],
                  "mouseout": [
                    {
                      "ctx": undefined,
                      "fn": [Function],
                    },
                  ],
                  "mouseover": [
                    {
                      "ctx": undefined,
                      "fn": [Function],
                    },
                  ],
                  "move": [
                    {
                      "ctx": undefined,
                      "fn": [Function],
                    },
                  ],
                  "remove": [
                    {
                      "ctx": undefined,
                      "fn": [Function],
                    },
                  ],
                },
                "_initHooksCalled": true,
                "_latlng": {
                  "lat": 2,
                  "lng": 1,
                },
                "_popup": NewClass {
                  "_content": "<h3>myLocation <img src="/markers/marker-unknown.svg" style="width:20px; height:20px" type="image/svg" title="State: unknown"></h3><h6> myType</h6>",
                  "_initHooksCalled": true,
                  "_source": [Circular],
                  "options": {},
                },
                "_popupHandlersAdded": true,
                "feature": {
                  "geometry": undefined,
                  "properties": {
                    "id": "id123",
                    "name": "myLocation",
                    "state": "unknown",
                    "type": "myType",
                    "url": "undefinedid123",
                  },
                  "type": "Point",
                },
                "options": {
                  "icon": NewClass {
                    "_initHooksCalled": true,
                    "options": {
                      "className": "leaflet-data-marker",
                      "html": "<svg version="1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 149 178"><path fill="#180068" stroke="#FFF" stroke-width="6" stroke-miterlimit="10" d="M126 23l-6-6A69 69 0 0 0 74 1a69 69 0 0 0-51 22A70 70 0 0 0 1 74c0 21 7 38 22 52l43 47c6 6 11 6 16 0l48-51c12-13 18-29 18-48 0-20-8-37-22-51z"/><circle fill="#ffffff" cx="74" cy="75" r="61"/><circle fill="#FFFFFF" cx="74" cy="75" r="30"/><svg xmlns="http://www.w3.org/2000/svg" viewBox="-11.3 -6 55 55"><path fill="#8F8B8B" d="M29.416 14.59L17.41 2.585a1.994 1.994 0 0 0-2.82 0L2.585 14.591a1.994 1.994 0 0 0 0 2.819L14.59 29.416a1.994 1.994 0 0 0 2.819 0L29.416 17.41a1.994 1.994 0 0 0 0-2.82zM16 24a1.5 1.5 0 1 1 1.5-1.5A1.5 1.5 0 0 1 16 24zm1.125-6.752v1.877h-2.25V15H17a1.875 1.875 0 0 0 0-3.75h-2a1.877 1.877 0 0 0-1.875 1.875v.5h-2.25v-.5A4.13 4.13 0 0 1 15 9h2a4.125 4.125 0 0 1 .125 8.248z"/><path d="M16 21a1.5 1.5 0 1 1-1.5 1.5A1.5 1.5 0 0 1 16 21zm1.125-3.752A4.125 4.125 0 0 0 17 9h-2a4.13 4.13 0 0 0-4.125 4.125v.5h2.25v-.5A1.877 1.877 0 0 1 15 11.25h2A1.875 1.875 0 0 1 17 15h-2.125v4.125h2.25z" opacity="0"/></svg></svg>",
                      "iconAnchor": [
                        12,
                        32,
                      ],
                      "iconSize": [
                        36,
                        41,
                      ],
                      "popupAnchor": [
                        0,
                        -28,
                      ],
                    },
                  },
                  "title": "myLocation",
                },
              },
            ],
          ],
          "results": [
            {
              "type": "return",
              "value": undefined,
            },
          ],
        },
      },
    },
  },
}
`;

exports[`marker addMarker, no markers 1`] = `
{
  "configParams": {
    "latProps": [
      "lat",
    ],
    "longProps": [
      "long",
    ],
    "tooltipProperties": [],
  },
  "markerTypes": {
    "myType": {
      "affectedRadiusMarkers": [],
      "clusterGroup": {
        "addLayer": [MockFunction] {
          "calls": [
            [
              NewClass {
                "_events": {
                  "click": [
                    {
                      "ctx": undefined,
                      "fn": [Function],
                    },
                  ],
                  "keypress": [
                    {
                      "ctx": undefined,
                      "fn": [Function],
                    },
                  ],
                  "mouseout": [
                    {
                      "ctx": undefined,
                      "fn": [Function],
                    },
                  ],
                  "mouseover": [
                    {
                      "ctx": undefined,
                      "fn": [Function],
                    },
                  ],
                  "move": [
                    {
                      "ctx": undefined,
                      "fn": [Function],
                    },
                  ],
                  "remove": [
                    {
                      "ctx": undefined,
                      "fn": [Function],
                    },
                  ],
                },
                "_initHooksCalled": true,
                "_latlng": {
                  "lat": 2,
                  "lng": 1,
                },
                "_popup": NewClass {
                  "_content": "<h3>myLocation <img src="/markers/marker-unknown.svg" style="width:20px; height:20px" type="image/svg" title="State: unknown"></h3><h6> myType</h6>",
                  "_initHooksCalled": true,
                  "_source": [Circular],
                  "options": {},
                },
                "_popupHandlersAdded": true,
                "feature": {
                  "geometry": undefined,
                  "properties": {
                    "id": "id123",
                    "name": "myLocation",
                    "state": "unknown",
                    "type": "myType",
                    "url": "undefinedid123",
                  },
                  "type": "Point",
                },
                "options": {
                  "icon": NewClass {
                    "_initHooksCalled": true,
                    "options": {
                      "className": "leaflet-data-marker",
                      "html": "<svg version="1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 149 178"><path fill="#180068" stroke="#FFF" stroke-width="6" stroke-miterlimit="10" d="M126 23l-6-6A69 69 0 0 0 74 1a69 69 0 0 0-51 22A70 70 0 0 0 1 74c0 21 7 38 22 52l43 47c6 6 11 6 16 0l48-51c12-13 18-29 18-48 0-20-8-37-22-51z"/><circle fill="#ffffff" cx="74" cy="75" r="61"/><circle fill="#FFFFFF" cx="74" cy="75" r="30"/><svg xmlns="http://www.w3.org/2000/svg" viewBox="-11.3 -6 55 55"><path fill="#8F8B8B" d="M29.416 14.59L17.41 2.585a1.994 1.994 0 0 0-2.82 0L2.585 14.591a1.994 1.994 0 0 0 0 2.819L14.59 29.416a1.994 1.994 0 0 0 2.819 0L29.416 17.41a1.994 1.994 0 0 0 0-2.82zM16 24a1.5 1.5 0 1 1 1.5-1.5A1.5 1.5 0 0 1 16 24zm1.125-6.752v1.877h-2.25V15H17a1.875 1.875 0 0 0 0-3.75h-2a1.877 1.877 0 0 0-1.875 1.875v.5h-2.25v-.5A4.13 4.13 0 0 1 15 9h2a4.125 4.125 0 0 1 .125 8.248z"/><path d="M16 21a1.5 1.5 0 1 1-1.5 1.5A1.5 1.5 0 0 1 16 21zm1.125-3.752A4.125 4.125 0 0 0 17 9h-2a4.13 4.13 0 0 0-4.125 4.125v.5h2.25v-.5A1.877 1.877 0 0 1 15 11.25h2A1.875 1.875 0 0 1 17 15h-2.125v4.125h2.25z" opacity="0"/></svg></svg>",
                      "iconAnchor": [
                        12,
                        32,
                      ],
                      "iconSize": [
                        36,
                        41,
                      ],
                      "popupAnchor": [
                        0,
                        -28,
                      ],
                    },
                  },
                  "title": "myLocation",
                },
              },
            ],
          ],
          "results": [
            {
              "type": "return",
              "value": undefined,
            },
          ],
        },
      },
    },
  },
}
`;

exports[`marker addMarker, no type cluster group 1`] = `
{
  "clusterGroup": {
    "addLayer": [MockFunction] {
      "calls": [
        [
          NewClass {
            "_events": {
              "click": [
                {
                  "ctx": undefined,
                  "fn": [Function],
                },
              ],
              "keypress": [
                {
                  "ctx": undefined,
                  "fn": [Function],
                },
              ],
              "mouseout": [
                {
                  "ctx": undefined,
                  "fn": [Function],
                },
              ],
              "mouseover": [
                {
                  "ctx": undefined,
                  "fn": [Function],
                },
              ],
              "move": [
                {
                  "ctx": undefined,
                  "fn": [Function],
                },
              ],
              "remove": [
                {
                  "ctx": undefined,
                  "fn": [Function],
                },
              ],
            },
            "_initHooksCalled": true,
            "_latlng": {
              "lat": 2,
              "lng": 1,
            },
            "_popup": NewClass {
              "_content": "<h3>myLocation <img src="/markers/marker-unknown.svg" style="width:20px; height:20px" type="image/svg" title="State: unknown"></h3><h6> myType</h6>",
              "_initHooksCalled": true,
              "_source": [Circular],
              "options": {},
            },
            "_popupHandlersAdded": true,
            "feature": {
              "geometry": undefined,
              "properties": {
                "id": "id123",
                "name": "myLocation",
                "state": "unknown",
                "type": "myType",
                "url": "undefinedid123",
              },
              "type": "Point",
            },
            "options": {
              "icon": NewClass {
                "_initHooksCalled": true,
                "options": {
                  "className": "leaflet-data-marker",
                  "html": "<svg version="1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 149 178"><path fill="#180068" stroke="#FFF" stroke-width="6" stroke-miterlimit="10" d="M126 23l-6-6A69 69 0 0 0 74 1a69 69 0 0 0-51 22A70 70 0 0 0 1 74c0 21 7 38 22 52l43 47c6 6 11 6 16 0l48-51c12-13 18-29 18-48 0-20-8-37-22-51z"/><circle fill="#ffffff" cx="74" cy="75" r="61"/><circle fill="#FFFFFF" cx="74" cy="75" r="30"/><svg xmlns="http://www.w3.org/2000/svg" viewBox="-11.3 -6 55 55"><path fill="#8F8B8B" d="M29.416 14.59L17.41 2.585a1.994 1.994 0 0 0-2.82 0L2.585 14.591a1.994 1.994 0 0 0 0 2.819L14.59 29.416a1.994 1.994 0 0 0 2.819 0L29.416 17.41a1.994 1.994 0 0 0 0-2.82zM16 24a1.5 1.5 0 1 1 1.5-1.5A1.5 1.5 0 0 1 16 24zm1.125-6.752v1.877h-2.25V15H17a1.875 1.875 0 0 0 0-3.75h-2a1.877 1.877 0 0 0-1.875 1.875v.5h-2.25v-.5A4.13 4.13 0 0 1 15 9h2a4.125 4.125 0 0 1 .125 8.248z"/><path d="M16 21a1.5 1.5 0 1 1-1.5 1.5A1.5 1.5 0 0 1 16 21zm1.125-3.752A4.125 4.125 0 0 0 17 9h-2a4.13 4.13 0 0 0-4.125 4.125v.5h2.25v-.5A1.877 1.877 0 0 1 15 11.25h2A1.875 1.875 0 0 1 17 15h-2.125v4.125h2.25z" opacity="0"/></svg></svg>",
                  "iconAnchor": [
                    12,
                    32,
                  ],
                  "iconSize": [
                    36,
                    41,
                  ],
                  "popupAnchor": [
                    0,
                    -28,
                  ],
                },
              },
              "title": "myLocation",
            },
          },
        ],
      ],
      "results": [
        {
          "type": "return",
          "value": undefined,
        },
      ],
    },
  },
  "configParams": {
    "latProps": [
      "lat",
    ],
    "longProps": [
      "long",
    ],
    "tooltipProperties": [],
  },
  "markerTypes": {
    "myType": {
      "affectedRadiusMarkers": [],
    },
  },
}
`;

exports[`marker updateMarker, known markers 1`] = `
{
  "configParams": {
    "latProps": [
      "lat",
    ],
    "longProps": [
      "long",
    ],
    "tooltipProperties": [],
  },
  "markerTypes": {
    "myType": {
      "affectedRadiusMarkers": [],
      "clusterGroup": {
        "addLayer": [MockFunction],
      },
      "markers": {
        "id123": NewClass {
          "_initHooksCalled": true,
          "_latlng": {
            "lat": 2,
            "lng": 1,
          },
          "feature": {
            "geometry": undefined,
            "properties": {
              "id": "id123",
              "name": "myLocation",
              "state": "unknown",
              "type": "myType",
              "url": "undefinedid123",
            },
            "type": "Point",
          },
          "options": {
            "icon": NewClass {
              "_initHooksCalled": true,
              "options": {
                "className": "leaflet-data-marker",
                "html": "<svg version="1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 149 178"><path fill="#180068" stroke="#FFF" stroke-width="6" stroke-miterlimit="10" d="M126 23l-6-6A69 69 0 0 0 74 1a69 69 0 0 0-51 22A70 70 0 0 0 1 74c0 21 7 38 22 52l43 47c6 6 11 6 16 0l48-51c12-13 18-29 18-48 0-20-8-37-22-51z"/><circle fill="#ffffff" cx="74" cy="75" r="61"/><circle fill="#FFFFFF" cx="74" cy="75" r="30"/><svg xmlns="http://www.w3.org/2000/svg" viewBox="-11.3 -6 55 55"><path fill="#8F8B8B" d="M29.416 14.59L17.41 2.585a1.994 1.994 0 0 0-2.82 0L2.585 14.591a1.994 1.994 0 0 0 0 2.819L14.59 29.416a1.994 1.994 0 0 0 2.819 0L29.416 17.41a1.994 1.994 0 0 0 0-2.82zM16 24a1.5 1.5 0 1 1 1.5-1.5A1.5 1.5 0 0 1 16 24zm1.125-6.752v1.877h-2.25V15H17a1.875 1.875 0 0 0 0-3.75h-2a1.877 1.877 0 0 0-1.875 1.875v.5h-2.25v-.5A4.13 4.13 0 0 1 15 9h2a4.125 4.125 0 0 1 .125 8.248z"/><path d="M16 21a1.5 1.5 0 1 1-1.5 1.5A1.5 1.5 0 0 1 16 21zm1.125-3.752A4.125 4.125 0 0 0 17 9h-2a4.13 4.13 0 0 0-4.125 4.125v.5h2.25v-.5A1.877 1.877 0 0 1 15 11.25h2A1.875 1.875 0 0 1 17 15h-2.125v4.125h2.25z" opacity="0"/></svg></svg>",
                "iconAnchor": [
                  12,
                  32,
                ],
                "iconSize": [
                  36,
                  41,
                ],
                "popupAnchor": [
                  0,
                  -28,
                ],
              },
            },
          },
        },
      },
    },
  },
}
`;

exports[`marker updateMarker, no markers 1`] = `
{
  "configParams": {
    "latProps": [
      "lat",
    ],
    "longProps": [
      "long",
    ],
    "tooltipProperties": [],
  },
  "markerTypes": {
    "myType": {
      "affectedRadiusMarkers": [],
      "clusterGroup": {
        "addLayer": [MockFunction],
      },
    },
  },
}
`;
